==> PX4/PX4-Autopilot/platforms/nuttx/src/px4/espressif/esp32/hrt/hrt.c <==
#include <px4_platform_common/px4_config.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <sys/types.h>
#include <stdbool.h>
#include <assert.h>
#include <debug.h>
#include <time.h>
#include <queue.h>
#include <errno.h>
#include <string.h>
#include "esp32_irq.h"
#include <xtensa.h>
#include <board_config.h>
#include <drivers/drv_hrt.h>
#  define hrtinfo _info
#  define hrtinfo(x...)
# define HRT_TIM_BASE			0x3ff5f000
# define HRT_TIMER_PERIPH		14
# define HRT_TIMER_PRIO			1
# define HRT_TIMER_VECTOR	        5 + HRT_TIMER_PERIPH
# define HRT_TIMER_CLOCK	        80 * 1000000
# define HRT_TIMER_BASE                 0x3ff5f000
# define HRT_TIMER_CLR_OFFSET		0x00a4
# define HRT_TIMER_INT_ENA_OFFSET	0x0098
# define HRT_TIMER_INT_CLR		1 << 0
# define HRT_TIM_BASE			0x3ff5f000 + 0x0024
# define HRT_TIMER_PERIPH		15
# define HRT_TIMER_PRIO			1
# define HRT_TIMER_VECTOR		5 + HRT_TIMER_PERIPH
# define HRT_TIMER_CLOCK		80 * 1000000
# define HRT_TIMER_BASE			0x3ff5f000 + 0x0024
# define HRT_TIMER_CLR_OFFSET		0x0080
# define HRT_TIMER_INT_ENA_OFFSET	0x0074
# define HRT_TIMER_INT_CLR		1 << 1
# define HRT_TIM_BASE			0x3ff5f000 + 0x1000
# define HRT_TIMER_PERIPH		18
# define HRT_TIMER_PRIO			1
# define HRT_TIMER_VECTOR		5 + HRT_TIMER_PERIPH
# define HRT_TIMER_CLOCK		80 * 1000000
# define HRT_TIMER_BASE			0x3ff5f000 + 0x1000
# define HRT_TIMER_CLR_OFFSET		0x00a4
# define HRT_TIMER_INT_ENA_OFFSET	0x0098
# define HRT_TIMER_INT_CLR		1 << 0

static void
hrt_tim_init(void)
{

	// ESP32_TIM_SETPRE(tim, ESP32_HRT_TIMER_PRESCALER);
	uint32_t mask = ((uint32_t)(HRT_TIMER_CLOCK / 1000000) - 1) << HRT_DIVIDER_S;
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, HRT_DIVIDER_M, mask);

	// ESP32_TIM_SETMODE(tim, ESP32_TIM_MODE_UP);
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, 0, HRT_INCREASE);

	// ESP32_TIM_CLEAR(tim);
	esp32_tim_putreg(HRT_TIM_BASE, HRT_LOAD_LO_OFFSET, 0);
	esp32_tim_putreg(HRT_TIM_BASE, HRT_LOAD_HI_OFFSET, 0);
	esp32_tim_putreg(HRT_TIM_BASE, HRT_LOAD_OFFSET, 1 << 0); //reload

	// ESP32_TIM_SETCTR(tim, 0); //set counter value
	esp32_tim_putreg(HRT_TIM_BASE, HRT_LOAD_LO_OFFSET, 0);
	esp32_tim_putreg(HRT_TIM_BASE, HRT_LOAD_HI_OFFSET, 0);

	// ESP32_TIM_RLD_NOW(tim);   //reload value now
	esp32_tim_putreg(HRT_TIM_BASE, HRT_LOAD_OFFSET, 1 << 0); //reload

	// ESP32_TIM_SETALRVL(tim, 1000);		//alarm value
	uint64_t val = 1000;
	uint64_t low_64 = val & 0xffffffff;
	uint64_t high_64 = (val >> 32) & 0xffffffff;
	esp32_tim_putreg(HRT_TIM_BASE, HRT_ALARM_LO_OFFSET, (uint32_t)low_64);
	esp32_tim_putreg(HRT_TIM_BASE, HRT_ALARM_HI_OFFSET, (uint32_t)high_64);

	// ESP32_TIM_SETALRM(tim, true);		//enable alarm
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, 0, HRT_ALARM_EN);
	// ESP32_TIM_SETARLD(tim, false);		//auto reload
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, HRT_AUTORELOAD, 0);

	// ESP32_TIM_SETISR(tim, hrt_tim_isr, NULL);
	esp32_setup_irq(0, HRT_TIMER_PERIPH, HRT_TIMER_PRIO, ESP32_CPUINT_LEVEL);
	irq_attach(HRT_TIMER_VECTOR, hrt_tim_isr, NULL);
	up_enable_irq(HRT_TIMER_VECTOR);

	// ESP32_TIM_ENABLEINT(tim);
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, 0, HRT_TIMER_LEVEL_INT_EN);
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_TIMER_INT_ENA_OFFSET, 0, HRT_TIMER_INT_ENA);

	// ESP32_TIM_START(tim);
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, 0, HRT_TIMER_EN);

}

static int IRAM_ATTR
hrt_tim_isr(int irq, void *context, void *arg)
{
	// uint32_t status = REG_READ(DPORT_APP_INTR_STATUS_1_REG);

	/* grab the timer for latency tracking purposes */
	uint32_t value_32;
	latency_actual = 0;
	/* Dummy value to latch the counter value to read it */
	esp32_tim_putreg(HRT_TIM_BASE, HRT_UPDATE_OFFSET, 1 << 0);
	/* Read value */
	value_32 = esp32_tim_getreg(HRT_TIM_BASE, HRT_HI_OFFSET); /* High 32 bits */
	latency_actual |= (uint64_t)value_32;
	latency_actual <<= 32;
	value_32 = esp32_tim_getreg(HRT_TIM_BASE, HRT_LO_OFFSET); /* Low 32 bits */
	latency_actual |= (uint64_t)value_32;

	/* do latency calculations */
	hrt_latency_update();

	/* run any callouts that have met their deadline */
	hrt_call_invoke();

	/* and schedule the next interrupt */
	hrt_call_reschedule();

	// acknowledge the interrupt
	esp32_tim_putreg(HRT_TIM_BASE, HRT_TIMER_CLR_OFFSET, HRT_TIMER_INT_CLR);
	esp32_tim_modifyreg32(HRT_TIM_BASE, HRT_CONFIG_OFFSET, 0, HRT_ALARM_EN);

	return OK;
}

hrt_abstime IRAM_ATTR
hrt_absolute_time(void)
{
	hrt_abstime	abstime;
	// uint64_t	count;
	irqstate_t	flags;

	/*
	 * Counter state.  Marked volatile as they may change
	 * inside this routine but outside the irqsave/restore
	 * pair.  Discourage the compiler from moving loads/stores
	 * to these outside of the protected range.
	 */
	// static volatile uint64_t last_count;

	/* prevent re-entry */
	flags = px4_enter_critical_section();
	rUPDATE = 1;
	abstime = (hrt_abstime)(((uint64_t)rHI << 32) | (uint64_t)rLO);

	px4_leave_critical_section(flags);

	return abstime;
}
