==> PX4/PX4-Autopilot/platforms/nuttx/src/px4/nxp/s32k3xx/hrt/hrt.c <==
#include <px4_platform_common/px4_config.h>
#include <systemlib/px4_macros.h>
#include <lib/perf/perf_counter.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <sys/types.h>
#include <stdbool.h>
#include <assert.h>
#include <debug.h>
#include <time.h>
#include <queue.h>
#include <errno.h>
#include <string.h>
#include <board_config.h>
#include <drivers/drv_hrt.h>
#include "hardware/s32k3xx_stm.h"
#  define hrtinfo _info
#  define hrtinfo(x...)
#define HRT_TIMER_FREQ         1000000 //FXOSC 16Mhz / 2 / 8
#define HRT_TIMER_VECTOR       S32K3XX_IRQ_STM0
#define HRT_INTERVAL_MIN	50
#define HRT_INTERVAL_MAX	50000
#define HRT_COUNTER_PERIOD	UINT32_MAX
#define HRT_COUNTER_SCALE(_c)	(_c)
#define _REG(_addr)	(*(volatile uint32_t *)(_addr))
#define STATUS_HRT  STM_CIR_CIF

static void hrt_tim_init(void)
{
	/* FTM clock should be configured in s32k1xx_periphclocks.c */

	/* claim our interrupt vector */

	irq_attach(HRT_TIMER_VECTOR, hrt_tim_isr, NULL);

	/* Reset the timer counter */

	putreg32(0, S32K3XX_STM0_CNT);

	/* Timer enable and prescaler 8 */

	putreg32(STM_CR_TEN | STM_CR_CPS(8), S32K3XX_STM0_CR);

	/* Channel 0 HRT  */

	putreg32(1000, S32K3XX_STM0_CMP0);

	putreg32(STM_CCR_CEN, S32K3XX_STM0_CCR0);

	/* enable interrupts */
	up_enable_irq(HRT_TIMER_VECTOR);
}

static int
hrt_tim_isr(int irq, void *context, void *arg)
{
	/* grab the timer for latency tracking purposes */

	latency_actual = getreg32(S32K3XX_STM0_CNT);

	/* copy interrupt status */
	uint32_t status = getreg32(S32K3XX_STM0_CIR0);

	/* was this a timer tick? */
	if (status & STATUS_HRT) {
		putreg32(STATUS_HRT, S32K3XX_STM0_CIR0);

		/* do latency calculations */
		hrt_latency_update();

		/* run any callouts that have met their deadline */
		hrt_call_invoke();

		/* and schedule the next interrupt */
		hrt_call_reschedule();
	}

	return OK;
}

hrt_abstime
hrt_absolute_time(void)
{
	hrt_abstime	abstime = 0;

	uint32_t	count;
	irqstate_t	flags;

	/*
	 * Counter state.  Marked volatile as they may change
	 * inside this routine but outside the irqsave/restore
	 * pair.  Discourage the compiler from moving loads/stores
	 * to these outside of the protected range.
	 */
	static volatile hrt_abstime base_time;
	static volatile uint32_t last_count;

	/* prevent re-entry */
	flags = px4_enter_critical_section();

	/* get the current counter value */
	count = getreg32(S32K3XX_STM0_CNT);

	/*
	 * Determine whether the counter has wrapped since the
	 * last time we're called.
	 *
	 * This simple test is sufficient due to the guarantee that
	 * we are always called at least once per counter period.
	 */
	if (count < last_count) {
		base_time += HRT_COUNTER_PERIOD;
	}

	/* save the count for next time */
	last_count = count;

	/* compute the current time */
	abstime = HRT_COUNTER_SCALE(base_time + count);

	px4_leave_critical_section(flags);

	return abstime;
}
